--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+    <h1>Imagen de ejemplo</h1>
     <img src="images/Capturesss.PNG" alt="Imagen">
 </body>
 </html>
