--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <body>
     <h1>Imagen de ejemplo</h1>
     <img src="images/Capturesss.PNG" alt="Imagen">
+    <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
