--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <h1>Imagen de ejemplo</h1>
     <img src="images/Capturesss.PNG" alt="Imagen">
-    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>    
+    <p>ejemplo de la profe</p>
 </body>
 </html>
